--- a/NWOD-Demon/NWOD-Demon.html
+++ b/NWOD-Demon/NWOD-Demon.html
@@ -46,8 +46,8 @@
                 <div class='sheet-col'>
                     <table>
                         <tr>
-                            <td>Incranation</td>
-                            <td><input type="text" name="attr_Incranation" /></td>
+                            <td>Incarnation</td>
+                            <td><input type="text" name="attr_Incarnation" /></td>
                         </tr>
                         <tr>
                             <td>Agenda</td>
